sw/themes/firefly/css/style.css
/* ... */
.exhibit-item-caption {
  line-height: 14px;
	margin-left: 10px;
}


#item-images {
  margin-right: 0px;
}

/* footer */

#footer-wrap {
	background-color: #EFC319;
    border-top: 2px solid rgb(245, 177, 38);
}

#footer-wrap {
	/*z-index: -1;
	position: relative;*/
}

#team {
	height: 99px;
}

#team div { 
	display: inline-block;
	padding: 0 8px;
}

#team div img {
/*	background-color: white; */
}

footer p {
    margin: 5px 0 0;
    float:right;
}
footer {
    position: inherit;
}

/* plugin overwrites */

/* Neatling*/
body.neatline.show div#neatline-map,body.neatline.fullscreen div#neatline-map {
	width: 100%;
}
body.neatline.show div#neatline-narrative,body.neatline.fullscreen div#neatline-narrative {
	display: none;
}

/*openlayers*/
[id^="open_layers_zoom_map_map"] {
    width: auto;
}
#neatline-map {
    height: 700px;
}




/* mobile views */


.hide-for-large-up {
	display:none;
}

.show-for-large-up {
	display:block;
}

/*end*/





@media screen and (max-width: 768px) {
    /* @group ----- Generic HTML elements ----- */
    input[type=text], input[type=password], textarea {
        width: 100%;
        display: block;
    }

    /* @end */
    /* @group ----- Global selectors ----- */
    #search-container {
        clear: both;
        width: 100%;
        margin-top: 1.5em;
        margin-bottom: 0em;
    }

    /* @end */
    /* @group ----- Header ----- */
    #site-title {
        width: 100%;
    }

    /* @end */
    /* @group ----- Navigation ----- */
    #primary-nav {
        display: none;
    }

    #mobile-nav {
        display: block;
        clear: both;
        position: relative;
        margin: 0 auto;
        padding: 0;
        width: 960px;
        zoom: 1;
    }
    #mobile-nav:after {
        content: "\0020";
        display: block;
        height: 0;
        clear: both;
        visibility: hidden;
    }
		.show-for-large-up {
			display:none
		}
		.hide-for-large-up {
			display: block;
    }

		header .text {
    	margin-left: 0;
		}

		#site-title {
			text-align: center;
		}

    .element-set:nth-of-type(2) {
        padding-left: 0;
    }

}
@media only screen and (max-width: 768px) and (min-width: 768px) and (max-width: 959px) {
    #mobile-nav {
        width: 768px;
    }
}
@media only screen and (max-width: 768px) and (max-width: 767px) {
    #mobile-nav {
        width: 300px;
    }
}
@media only screen and (max-width: 768px) and (min-width: 480px) and (max-width: 767px) {
    #mobile-nav {
        width: 420px;
    }
}
@media screen and (max-width: 768px) {
    #mobile-nav ul {
        position: absolute;
        z-index: 199;
        background: #fafafa;
        border-bottom: 1px solid #ccc;
        width: 100%;
        padding-left: 0;
        margin: 0;
    }
    #mobile-nav li {
        text-align: left;
        display: block;
        overflow: hidden;
        width: 100%;
    }
    #mobile-nav a {
        text-decoration: none;
        display: block;
        padding: 10px;
        border: 1px solid #ccc;
        border-width: 1px 1px 0 1px;
    }
    #mobile-nav a:hover {
        background: #fff;
    }
    #mobile-nav > a:first-child {
        background: #fafafa;
        cursor: pointer;
    }
    #mobile-nav li.current a {
        background: #fff;
        color: #ff8000;
    }
    #mobile-nav li ul {
        position: relative;
    }
    #mobile-nav li ul a:before {
        content: "-- ";
    }
    #mobile-nav li ul ul a:before {
        content: "---- ";
    }

    /* @end */
    /* @group ----- Footer ----- */
    footer .navigation {
        float: none;
        width: 100%;
        text-align: left;
        margin-bottom: 1.5em;
    }

    /* @end */
    /* @group ----- Home ----- */
    #home #primary, #home #secondary {
        padding: 0;
        max-width: 100%;
    }

    #home #primary > div:last-of-type {
        border-bottom: 1px solid #ccc;
    }

    /* @end */
    /* @group ----- Items/Browse ----- */
    .browse .item img {
        margin-bottom: 1.5em;
        margin-top: 1.5em;
    }

    .browse .item.record h2 {
        margin-bottom: 0.75em;
    }

    .browse .item-meta .item-img {
        width: auto;
        float: left;
        margin: 0 1.5em 0 0;
    }
    .browse .item-meta .item-img img {
        margin-top: 0em;
    }

    .browse .item {
        padding: 1.5em 0;
    }

    .browse .item-meta > div {
        float: none;
    }

    #sort-links {
        float: left;
    }

    /* @end */
    /* @group ----- Exhibits/Show ----- */
    .exhibit {
        clear: both;
    }

    .exhibit .description {
        float: none;
    }

    .exhibit .description ~ * {
        padding: 0;
        -moz-box-sizing: border-box;
        -webkit-box-sizing: border-box;
        box-sizing: border-box;
    }

    /* @end */
    /* @group ----- Exhibits/Show ----- */
    #exhibit-pages {
        width: 100%;
    }

    #search-container {
        margin-top: 0;
        margin-bottom: 6px;
    }
    /* @end */
}

/* emlo mobile */

#mobile-nav > a:first-child {
    border: 0;
    background-color: #EFC319;
}

